Closed
Bug 680396
Opened 14 years ago
Closed 14 years ago
TB 6.0 crash when sending or saving an e-mail with attached PDF [@ nsSJISProber::HandleData]
Categories
(MailNews Core :: Composition, defect)
Tracking
(thunderbird7 fixed, thunderbird8 fixed)
VERIFIED
FIXED
Thunderbird 9.0
People
(Reporter: portomomo, Assigned: m_kato)
References
()
Details
(4 keywords, Whiteboard: [gs])
Crash Data
Attachments
(1 file)
|
988 bytes,
patch
|
Bienvenu
:
review+
standard8
:
approval-comm-aurora+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10.6; rv:6.0) Gecko/20100101 Firefox/6.0
Build ID: 20110811165603
Steps to reproduce:
Attach a pdf file to a mail message and try to send or save the message.
TB 6 on mac os 10.6.6 32 Bit
Actual results:
TB crashes and exit.
Attaching other files works normally.
All addons and extras are deactivated.
Expected results:
Mail message sent or saved.
Crash ID:
bp-1a041edf-981d-4415-bd1a-d1fbf2110817
The same as Bug 673673 but on TB 6
Comment 1•14 years ago
|
||
Did you submit the crash ? Can you double check the ID because I can't find it.
Yep, submitted and link working:
https://crash-stats.mozilla.com/report/index/1a041edf-981d-4415-bd1a-d1fbf2110817
Comment 3•14 years ago
|
||
yeah, this is our new topcrash :(
Severity: normal → critical
Status: UNCONFIRMED → RESOLVED
Crash Signature: [@ nsSJISProber::HandleData]
Closed: 14 years ago
Resolution: --- → DUPLICATE
Summary: TB 6.0 crash when sending or saving an e-mail with attached PDF: Crash ID: bp-1a041edf-981d-4415-bd1a-d1fbf2110817 → TB 6.0 crash when sending or saving an e-mail with attached PDF: Crash ID: bp-1a041edf-981d-4415-bd1a-d1fbf2110817 [@ nsSJISProber::HandleData]
| Assignee | ||
Updated•14 years ago
|
Status: RESOLVED → REOPENED
Ever confirmed: true
Resolution: DUPLICATE → ---
| Assignee | ||
Comment 4•14 years ago
|
||
We have to fix this on comm-central side too. So reopen this.
Depends on: 601261
| Assignee | ||
Comment 5•14 years ago
|
||
Assignee: nobody → m_kato
Status: REOPENED → ASSIGNED
| Assignee | ||
Comment 6•14 years ago
|
||
Comment on attachment 555042 [details] [diff] [review]
fix for c-c
need fix on c-c too. more detail is bug 601261
Attachment #555042 -
Flags: review?(dbienvenu)
| Assignee | ||
Updated•14 years ago
|
Component: General → Composition
Product: Thunderbird → MailNews Core
QA Contact: general → composition
Comment 7•14 years ago
|
||
Comment on attachment 555042 [details] [diff] [review]
fix for c-c
thx for the patch - it sure seems like the decoder should handle empty input, however.
Attachment #555042 -
Flags: review?(dbienvenu) → review+
| Assignee | ||
Comment 8•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago → 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 9.0
| Assignee | ||
Updated•14 years ago
|
Attachment #555042 -
Flags: approval-comm-beta?
Attachment #555042 -
Flags: approval-comm-aurora?
Updated•14 years ago
|
Attachment #555042 -
Flags: approval-comm-beta?
Attachment #555042 -
Flags: approval-comm-beta+
Attachment #555042 -
Flags: approval-comm-aurora?
Attachment #555042 -
Flags: approval-comm-aurora+
| Assignee | ||
Comment 9•14 years ago
|
||
http://hg.mozilla.org/releases/comm-aurora/rev/49d31af85184
http://hg.mozilla.org/releases/comm-beta/rev/76fb1c1301c3
status-thunderbird7:
--- → fixed
status-thunderbird8:
--- → fixed
Comment 10•14 years ago
|
||
Thanks for doing this Makoto
was this regression caused by bug 661876?
Summary: TB 6.0 crash when sending or saving an e-mail with attached PDF: Crash ID: bp-1a041edf-981d-4415-bd1a-d1fbf2110817 [@ nsSJISProber::HandleData] → TB 6.0 crash when sending or saving an e-mail with attached PDF [@ nsSJISProber::HandleData]
Comment 11•14 years ago
|
||
according to reporter of bp-df83c893-2d76-4fb2-8182-0c0482110808, today's ftp://ftp.mozilla.org/pub/thunderbird/nightly/latest-comm-aurora/ resolves the crash
Status: RESOLVED → VERIFIED
Updated•14 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•