Bug 680396 - TB 6.0 crash when sending or saving an e-mail with attached PDF. r=dbienvenu